--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
    <link rel="canonical" href="http://example.com/" />
    <meta name=" robots" content=" index, follow">
    <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="css/about.css">
+   <link rel="stylesheet" href="css/contact.css">
 </head>
 
 <body>
@@ -46,33 +46,46 @@
       <div class="container">
          <a href="javascript:void(0)" class="header__brand-logo">SM</a>
          <nav class="header__nav">
-            <a href="javascript:void(0)" class="nav__link nav__link--active">About</a>
-            <a href="javascript:void(0)" class="nav__link">Products</a>
-            <a href="javascript:void(0)" class="nav__link">Contact</a>
+            <a href="javascript:void(0)" class="nav__link">About</a>
+            <a href="javascript:void(0)" class="nav__link">Product</a>
+            <a href="javascript:void(0)" class="nav__link nav__link--active">Contact</a>
          </nav>
       </div>
    </header>
-   <!-- *ABOUT* -->
-   <section class="about">
+   <!-- *CONTACT* -->
+   <section class="contact">
       <div class="container">
-         <h1 class="heading">About Us</h1>
+         <h1 class="heading">Get In Touch</h1>
          <p class="paragraph">
-            We help companies innovate faster and build better products, using real user data and rapid iterations. We
-            help
-            companies innovate faster and build better products, using real user data and rapid iterations.
+            We help companies innovate faster and build better products, using real user data and rapid iterations.
          </p>
-         <img class="about__pic" src="" alt="">
-         <h3 class="about__name">Mr. Dipak Devre</h3>
-         <small class="about__designation">Founder - Sai Marketing</small>
-         <p class="paragraph">
-            To become best dealership in town by implementing effective communication & strong review mechanism towards
-            sustained
-            business growth.
-            To become best dealership in town by implementing effective communication & strong review mechanism towards
-            sustained
-            business growth.
-         </p>
+         <form action="" class="contact__form">
+            <div class="form-group">
+               <label for="">Name</label>
+               <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+               <label for="">Email</label>
+               <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+               <label for="">Mobile</label>
+               <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+               <label for="">Subject</label>
+               <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+               <label for="">Message</label>
+               <textarea id="" rows="4" class="form-control"></textarea>
+            </div>
+            <button type="submit" class="btn btn-send-message"><i class="fal "></i>Send Message</button>
+         </form>
       </div>
+   </section>
+   <!-- *MAP* -->
+   <section class="map">
    </section>
    <!-- *FOOTER* -->
    <footer class="footer">
