--- a/products.html
+++ b/products.html
@@ -21,43 +21,52 @@
    <!-- *HERO* -->
    <section class="hero">
       <div class="hero__info">
-         <div class="container">
-            <small class="hero__label">Welcome to</small>
-            <h1 class="hero__title">Sai Marketing</h1>
-            <div class="hero__rating">
-               <i class="fal fa-star"></i>
-               <i class="fal fa-star"></i>
-               <i class="fal fa-star"></i>
-               <i class="fal fa-star"></i>
-               <i class="fal fa-star"></i>
-               <span>4.5/5</span>
-            </div>
-            <div class="hero__tags">
-               <span class="hero__tags_item">Cold Storage Services</span>
-               <span class="hero__tags_item">Frozen Food Product Distributors</span>
-               <span class="hero__tags_item">HORECA Distributor</span>
-            </div>
+         <small class="hero__label">Welcome to</small>
+         <h1 class="hero__title">Sai Marketing</h1>
+         <div class="hero__rating">
+            <span class="hero__rating_icon">
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star"></i>
+               <i class="fa-solid fa-star-half-stroke"></i>
+               <i class="fa-regular fa-star"></i>
+            </span>
+            <span class="hero__rating_txt">4.5 / 5</span>
+         </div>
+         <div class="hero__tags">
+            <span class="hero__tags_item">Cold Storage Services</span>
+            <span class="hero__tags_item">Frozen Food Product Distributors</span>
+            <span class="hero__tags_item">HORECA Distributor</span>
          </div>
       </div>
       <div class="hero__contact">
-         <div class="container">
-            <a href="javascript:void(0)" class="hero__contact_link"><i
-                  class="fal fa-envelope"></i><span>sairam.sr389@gmail.com</span></a>
-            <a href="javascript:void(0)" class="hero__contact_link"><i class="fal fa-phone"></i><span>+91
-                  9324206327</span></a>
-            <a href="javascript:void(0)" class="hero__contact_link"><i class="fal fa-map-marker-alt"></i><span>Mazgaon,
-                  Mumbai</span></a>
+         <div class="hero__contact_action">
+            <a href="mailto:sairam.sr389@gmail.com" class="hero__contact_link">
+               <i class="fa-light fa-envelope"></i>
+               <span>sairam.sr389@gmail.com</span>
+            </a>
+            <a href="tel:+919324206327" class="hero__contact_link">
+               <i class="fa-light fa-phone"></i>
+               <span>+91 9324206327</span>
+            </a>
+            <a href="javascript:void(0)" class="hero__contact_link">
+               <i class="fa-light fa-map-marker-alt"></i>
+               <span>Mazgaon, Mumbai</span>
+            </a>
          </div>
       </div>
    </section>
    <!-- *HEADER* -->
    <header class="header">
       <div class="container">
-         <a href="javascript:void(0)" class="header__brand">SM</a>
+         <a href="javascript:void(0)" class="header__brand">
+            <small>SM</small>
+            <span>Sai Marketing</span>
+         </a>
          <nav class="header__nav">
-            <a href="javascript:void(0)" class="header__nav_link">About</a>
-            <a href="javascript:void(0)" class="header__nav_link header__nav_link--active">Product</a>
-            <a href="javascript:void(0)" class="header__nav_link">Contact</a>
+            <a href="index.html" class="header__nav_link">About</a>
+            <a href="products.html" class="header__nav_link header__nav_link--active">Product</a>
+            <a href="contact.html" class="header__nav_link">Contact</a>
          </nav>
       </div>
    </header>
@@ -148,21 +157,21 @@
             companies innovate faster and build better product, using real user data and rapid iterations.
          </p>
          <div class="reseller__list">
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
-            <span class="reseller__list_item"><img src="" alt=""></span>
+            <span class="reseller__list_item"><img src="images/itc.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/gadre.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/godrej.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/milki-mist.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/iscon-balaji.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/havmore.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/hy-fun.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/bangur.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/tasty-fresh.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/haldirams.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/seths.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/meatzza.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/total.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/amul.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/goeld.png" alt=""></span>
          </div>
       </div>
    </section>
