--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,17 @@
    <meta name="description" content="This is a meta description sample. We can add up to 160 characters.">
    <link rel="canonical" href="http://example.com/" />
    <meta name=" robots" content=" index, follow">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet">
+   <link rel="stylesheet" href="css/normalize.css">
+   <link rel="stylesheet" href="plugins/fontawesome/css/all.min.css">
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/contact.css">
 </head>
 
 <body>
-
    <!-- *CONTACT* -->
    <section class="contact">
       <div class="container">
@@ -22,34 +27,38 @@
             We help companies innovate faster and build better products, using real user data and rapid iterations.
          </p>
          <form action="" class="contact__form">
-            <div class="form-group">
-               <label for="">Name</label>
-               <input type="text" class="form-control">
+            <div class="form_group area-name">
+               <label for="" class="form_label">Name</label>
+               <input type="text" class="form_control">
             </div>
-            <div class="form-group">
-               <label for="">Email</label>
-               <input type="text" class="form-control">
+            <div class="form_group area-email">
+               <label for="" class="form_label">Email</label>
+               <input type="text" class="form_control">
             </div>
-            <div class="form-group">
-               <label for="">Mobile</label>
-               <input type="text" class="form-control">
+            <div class="form_group area-mobile">
+               <label for="" class="form_label">Mobile</label>
+               <input type="text" class="form_control">
             </div>
-            <div class="form-group">
-               <label for="">Subject</label>
-               <input type="text" class="form-control">
+            <div class="form_group area-subject">
+               <label for="" class="form_label">Subject</label>
+               <input type="text" class="form_control">
             </div>
-            <div class="form-group">
-               <label for="">Message</label>
-               <textarea id="" rows="4" class="form-control"></textarea>
+            <div class="form_group area-message">
+               <label for="" class="form_label">Message</label>
+               <textarea id="" rows="4" class="form_control"></textarea>
             </div>
-            <button type="submit" class="btn btn-send-message"><i class="fal "></i>Send Message</button>
+            <button type="submit" class="btn_send_message area-send"><i class="fa-light fa-paper-plane"></i>Send
+               Message</button>
          </form>
       </div>
    </section>
    <!-- *MAP* -->
    <section class="map">
+      <iframe
+         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.2447597147684!2d72.83786907583581!3d18.964794955453044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7cf5ceab18ef1%3A0x3a8bd57ee6c4e017!2sSai%20Marketing%20Office!5e0!3m2!1sen!2sin!4v1700565918728!5m2!1sen!2sin"
+         width="100%" height="450" style="border:0;" allowfullscreen="no" loading="lazy"
+         referrerpolicy="no-referrer-when-downgrade"></iframe>
    </section>
-
 </body>
 
 </html>
