--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
    <meta name="description" content="This is a meta description sample. We can add up to 160 characters.">
    <link rel="canonical" href="http://example.com/" />
    <meta name=" robots" content=" index, follow">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet">
+   <link rel="stylesheet" href="plugins/fontawesome/css/all.min.css">
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/about.css">
 </head>
@@ -23,19 +28,24 @@
             help
             companies innovate faster and build better products, using real user data and rapid iterations.
          </p>
-         <img class="about__pic" src="" alt="">
-         <h3 class="about__name">Mr. Dipak Devre</h3>
-         <small class="about__designation">Founder - Sai Marketing</small>
-         <p class="paragraph">
-            To become best dealership in town by implementing effective communication & strong review mechanism towards
-            sustained
-            business growth.
-            To become best dealership in town by implementing effective communication & strong review mechanism towards
-            sustained
-            business growth.
-         </p>
+         <div class="about__profile">
+            <img class="about__pic" src="images/dipak-devre.jpg" alt="dipak-devre">
+            <h3 class="about__name">Mr. Dipak Devre</h3>
+            <h4 class="about__designation">Founder - Sai Marketing</h4>
+            <p class="paragraph">
+               To become best dealership in town by implementing effective communication & strong review mechanism
+               towards
+               sustained
+               business growth.
+               To become best dealership in town by implementing effective communication & strong review mechanism
+               towards
+               sustained
+               business growth.
+            </p>
+         </div>
       </div>
    </section>
 
 </body>
+
 </html>
