--- a/product.html
+++ b/product.html
@@ -49,7 +49,7 @@
                <i class="fa-light fa-phone"></i>
                <span>+91 9324206327</span>
             </a>
-            <a href="javascript:void(0)" class="hero__contact_link">
+            <a href="https://maps.app.goo.gl/5WCviWKSQe7GWZ136" class="hero__contact_link">
                <i class="fa-light fa-map-marker-alt"></i>
                <span>Mazgaon, Mumbai</span>
             </a>
@@ -65,7 +65,7 @@
          </a>
          <nav class="header__nav">
             <a href="index.html" class="header__nav_link">About</a>
-            <a href="products.html" class="header__nav_link header__nav_link--active">Product</a>
+            <a href="product.html" class="header__nav_link header__nav_link--active">Product</a>
             <a href="contact.html" class="header__nav_link">Contact</a>
          </nav>
       </div>
@@ -157,71 +157,79 @@
             companies innovate faster and build better product, using real user data and rapid iterations.
          </p>
          <div class="reseller__list">
-            <span class="reseller__list_item"><img src="images/itc.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/gadre.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/godrej.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/milki-mist.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/iscon-balaji.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/havmore.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/hy-fun.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/bangur.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/tasty-fresh.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/haldirams.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/seths.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/meatzza.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/total.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/amul.png" alt=""></span>
-            <span class="reseller__list_item"><img src="images/goeld.png" alt=""></span>
+            <span class="reseller__list_item"><img src="images/itc.png" alt="itc"></span>
+            <span class="reseller__list_item"><img src="images/gadre.png" alt="gadre"></span>
+            <span class="reseller__list_item"><img src="images/godrej.png" alt="godrej"></span>
+            <span class="reseller__list_item"><img src="images/milki-mist.png" alt="milki-mist"></span>
+            <span class="reseller__list_item"><img src="images/iscon-balaji.png" alt="iscon-balaji"></span>
+            <span class="reseller__list_item"><img src="images/havmore.png" alt="havmore"></span>
+            <span class="reseller__list_item"><img src="images/hy-fun.png" alt="hy-fun"></span>
+            <span class="reseller__list_item"><img src="images/bangur.png" alt="bangur"></span>
+            <span class="reseller__list_item"><img src="images/tasty-fresh.png" alt="tasty-fresh"></span>
+            <span class="reseller__list_item"><img src="images/haldirams.png" alt="haldirams"></span>
+            <span class="reseller__list_item"><img src="images/seths.png" alt="seths"></span>
+            <span class="reseller__list_item"><img src="images/meatzza.png" alt="meatzza"></span>
+            <span class="reseller__list_item"><img src="images/total.png" alt="total"></span>
+            <span class="reseller__list_item"><img src="images/amul.png" alt="amul"></span>
+            <span class="reseller__list_item"><img src="images/goeld.png" alt="goeld"></span>
          </div>
       </div>
    </section>
    <!-- *FOOTER* -->
    <footer class="footer">
       <div class="container">
-         <div class="display-grid three-column">
-            <div class="footer__about">
-               <h3 class="footer__head">About Sai Marketing</h3>
-               <p class="footer__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, earum
-                  similique quasi vel
-                  molestiae
-                  veniam facere enim explicabo mollitia perspiciatis, laboriosam dolore. Eaque sed eveniet, soluta
-                  asperiores
-                  quidem adipisci vero.</p>
-            </div>
-            <div class="footer__address">
-               <h3 class="footer__head">Address</h3>
-               <p class="footer__para">Plot No. 71, Manohar Building,<br> H. K. Marg, Mazgaon, (Near Hamja Tower)<br>
-                  Mumbai - 400010</p>
-               <p class="footer__para">GSTIN - 27ALGPD5253P1ZR</P>
-               <div class="footer__social">
-                  <a href="javascript:void(0)" class="footer__social_link">
-                     <i class="fab fa-facebook-square"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="footer__social_link">
-                     <i class="fab fa-twitter-square"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="footer__social_link">
-                     <i class="fab fa-linkedin"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="footer__social_link">
-                     <i class="fab fa-whatsapp-square"></i>
-                  </a>
+         <div class="row">
+            <div class="col-6">
+               <div class="footer__about">
+                  <h3 class="footer__head">About Sai Marketing</h3>
+                  <p class="footer__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, earum
+                     similique quasi vel
+                     molestiae
+                     veniam facere enim explicabo mollitia perspiciatis, laboriosam dolore. Eaque sed eveniet, soluta
+                     asperiores
+                     quidem adipisci vero.</p>
                </div>
             </div>
-            <div class="footer__bizhrs">
-               <h3 class="footer__head">Business Hrs</h3>
-               <p class="footer__para">
-                  Monday - Saturday
-                  <small>(09:00 am - 07:00 pm)</small>
-               </p>
-               <p class="footer__para">
-                  Sunday
-                  <small>Closed</small>
-               </p>
+            <div class="col-3">
+               <div class="footer__address">
+                  <h3 class="footer__head">Address</h3>
+                  <p class="footer__para">Plot No. 71, Manohar Building,<br> H. K. Marg, Mazgaon, (Near Hamja Tower)<br>
+                     Mumbai - 400010</p>
+                  <p class="footer__para">GSTIN - 27ALGPD5253P1ZR</P>
+                  <div class="footer__social">
+                     <a href="javascript:void(0)" class="footer__social_link">
+                        <i class="fa-brands fa-facebook-square"></i>
+                     </a>
+                     <a href="javascript:void(0)" class="footer__social_link">
+                        <i class="fa-brands fa-twitter-square"></i>
+                     </a>
+                     <a href="javascript:void(0)" class="footer__social_link">
+                        <i class="fa-brands fa-linkedin"></i>
+                     </a>
+                     <a href="javascript:void(0)" class="footer__social_link">
+                        <i class="fa-brands fa-whatsapp-square"></i>
+                     </a>
+                  </div>
+               </div>
             </div>
-         </div>
-         <div class="footer__copy">
-            Copyright © 2023. Sai Marketing. All rights reserved.
+            <div class="col-3">
+               <div class="footer__bizhrs">
+                  <h3 class="footer__head">Business Hrs</h3>
+                  <p class="footer__para">
+                     Monday - Saturday
+                     <small>(09:00 am - 07:00 pm)</small>
+                  </p>
+                  <p class="footer__para">
+                     Sunday
+                     <small>Closed</small>
+                  </p>
+               </div>
+            </div>
+            <div class="col-12">
+               <div class="footer__copy">
+                  Copyright © 2023. Sai Marketing. All rights reserved.
+               </div>
+            </div>
          </div>
       </div>
    </footer>
