--- a/product.html
+++ b/product.html
@@ -178,57 +178,49 @@
    <!-- *FOOTER* -->
    <footer class="footer">
       <div class="container">
-         <div class="row">
-            <div class="col-6">
-               <div class="footer__about">
-                  <h3 class="footer__head">About Sai Marketing</h3>
-                  <p class="footer__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, earum
-                     similique quasi vel
-                     molestiae
-                     veniam facere enim explicabo mollitia perspiciatis, laboriosam dolore. Eaque sed eveniet, soluta
-                     asperiores
-                     quidem adipisci vero.</p>
+         <div class="footer__area">
+            <div class="footer__about area-about">
+               <h3 class="footer__head">About Sai Marketing</h3>
+               <p class="footer__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, earum
+                  similique quasi vel
+                  molestiae
+                  veniam facere enim explicabo mollitia perspiciatis, laboriosam dolore. Eaque sed eveniet, soluta
+                  asperiores
+                  quidem adipisci vero.</p>
+            </div>
+            <div class="footer__address area-address">
+               <h3 class="footer__head">Address</h3>
+               <p class="footer__para">Plot No. 71, Manohar Building,<br> H. K. Marg, Mazgaon, (Near Hamja Tower)<br>
+                  Mumbai - 400010</p>
+               <p class="footer__para">GSTIN - 27ALGPD5253P1ZR</P>
+               <div class="footer__social">
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-facebook-square"></i>
+                  </a>
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-twitter-square"></i>
+                  </a>
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-linkedin"></i>
+                  </a>
+                  <a href="javascript:void(0)" class="footer__social_link">
+                     <i class="fa-brands fa-whatsapp-square"></i>
+                  </a>
                </div>
             </div>
-            <div class="col-3">
-               <div class="footer__address">
-                  <h3 class="footer__head">Address</h3>
-                  <p class="footer__para">Plot No. 71, Manohar Building,<br> H. K. Marg, Mazgaon, (Near Hamja Tower)<br>
-                     Mumbai - 400010</p>
-                  <p class="footer__para">GSTIN - 27ALGPD5253P1ZR</P>
-                  <div class="footer__social">
-                     <a href="javascript:void(0)" class="footer__social_link">
-                        <i class="fa-brands fa-facebook-square"></i>
-                     </a>
-                     <a href="javascript:void(0)" class="footer__social_link">
-                        <i class="fa-brands fa-twitter-square"></i>
-                     </a>
-                     <a href="javascript:void(0)" class="footer__social_link">
-                        <i class="fa-brands fa-linkedin"></i>
-                     </a>
-                     <a href="javascript:void(0)" class="footer__social_link">
-                        <i class="fa-brands fa-whatsapp-square"></i>
-                     </a>
-                  </div>
-               </div>
+            <div class="footer__bizhrs area-bizhrs">
+               <h3 class="footer__head">Business Hrs</h3>
+               <p class="footer__para">
+                  Monday - Saturday
+                  <small>(09:00 am - 07:00 pm)</small>
+               </p>
+               <p class="footer__para">
+                  Sunday
+                  <small>Closed</small>
+               </p>
             </div>
-            <div class="col-3">
-               <div class="footer__bizhrs">
-                  <h3 class="footer__head">Business Hrs</h3>
-                  <p class="footer__para">
-                     Monday - Saturday
-                     <small>(09:00 am - 07:00 pm)</small>
-                  </p>
-                  <p class="footer__para">
-                     Sunday
-                     <small>Closed</small>
-                  </p>
-               </div>
-            </div>
-            <div class="col-12">
-               <div class="footer__copy">
-                  Copyright © 2023. Sai Marketing. All rights reserved.
-               </div>
+            <div class="footer__copy area-copy">
+               Copyright © 2023. Sai Marketing. All rights reserved.
             </div>
          </div>
       </div>
